fix scoreboard top area misalignment

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@ input[type="number"]:focus-visible {
   display: flex;
   gap: 0.5rem;
   align-items: center;
+  flex: 1;
 }
 
 .scoreboard-area__score-selected-player {
